--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      /* Set the entire body background color to black */
+      body {
+        background-color:rgb(15 15 15);
+        color: white; /* Optional: Set text color to white for better visibility */
+      }
+    </style>
   </head>
-  <body>
+  <body class="overflow-x-hidden" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
